# chess-ai

./: .game.h.swp  .game_state.h.swp  .gitignore  .player.h.swp  CMakeLists.txt  LICENSE.md  NOTES.txt  README.md  notes.txt
src/: Makefile  browse.VC.db  main.cpp
src/abstract/: agent.h  game.cpp  game.h  game_state.h
src/chess/: .chess_state.cpp.swp  chess.cpp  chess.h  chess_state.cpp  chess_state.h  common.h  piece_tracker.cpp  piece_tracker.h
tests/: chess_state_test.cpp  stupid_test.cpp
